# mini-tuitter

./: .gitignore  docker-compose-dev.yml  docker-compose.yml
auth-service/: auth-service.db  local_consumer_test.py  requirements.txt
auth-service/src/: auth-service.db  main.py
auth-service/src/config/: base_event_schema.py  database_session.py  extended_base_model.py
auth-service/src/crypto/: hashing_context.py
auth-service/src/dtos/: change_password_dto.py  create_account_dto.py  login_account_dto.py  register_account_dto.py  update_account_dto.py
contracts/: auth-account-events.avsc
frontend/: Dockerfile  nginx.conf  package-lock.json
scripts/: create-topics.sh
user-service/: Dockerfile  pyproject.toml  requirements.txt
user-service/src/: main.py
user-service/src/config/: database_session.py  logging.py
user-service/src/config/kafka/schemas/: base_event_schema.py  event_type.py
user-service/src/contracts/: account-events.avsc
user-service/src/dtos/: create_account_dto.py  update_account_dto.py
user-service/src/enums/: gender.py  role.py
user-service/src/kafka/: account_event_consumer.py  base_event_consumer.py  event_handler.py  kafka_producer.py
user-service/src/kafka/account_event_handlers/: create_account_event_handler.py  update_account_event_handler.py
user-service/src/kafka/consumer/: account_created_consumer.py
user-service/src/models/entity/: user_entity.py
user-service/src/routers/: user_router.py
user-service/src/schemas/: full_user_schema.py  user_schema.py
user-service/src/services/: user_service.py
(+16 files in other folders)
