[project]
name = "user-service"
description = "Handle service"
version = "2020.0.0"

requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]==0.136.0",
    "starlette==1.0.0",
    "uvicorn==0.44.0",
    "sqlalchemy==2.0.49",
    "pydantic==2.13.2",
    "pydantic[email]==2.13.2",
    "passlib[argon2]==1.7.4",
    "PyJWT==2.12.1",
    "confluent-kafka[avro]==2.14.0"
]

authors = [
    { name = "Ruben Lousada", email = "ruben.lousada.dev@gmail.com" },
]